fixin squashing on iframe

--- a/index.css
+++ b/index.css
@@ -37,6 +37,6 @@ body {
 }
 
 iframe {
-  width: 100%;
+  width: auto;
   height: auto;
 }
